--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,5 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <%- include('../components/button/button.html', {nom : "coucou"}); %>
-  </body>
+  <body></body>
 </html>
