--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,5 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <button>coucou</button>
-
-  </body>
+  <body></body>
 </html>
