feat(header): Création du dossier src/layouts/header(html+css) + export => src/pages/index.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,5 +11,7 @@
       href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"
     />
   </head>
-  <body></body>
+  <body>
+    <%- include('../layouts/header/header.html'); %>
+  </body>
 </html>
