--- a/www/index.html
+++ b/www/index.html
@@ -11,5 +11,8 @@
       href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"
     />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+
+  </body>
 </html>
