feat(.photographerLink) : Ajout et mise en forme du lien "Nos photographes" + header: grid;

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,8 @@
     />
   </head>
   <body>
-    <header><a href="./index.html" class="logo" title="logo"
+    <header>
+  <a href="./index.html" class="logo" title="logo"
   ><svg
     width="150"
     height="38"
@@ -57,6 +58,8 @@
     </defs>
   </svg>
 </a>
+
+  <a href="#" class="photographerLink">Nos photographes</a>
 </header>
 
   </body>
