feat(nav/.filterLink): Developpement de la nav contenant les components filterLink. Header mobile terminé.

--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,19 @@
 </a>
 
   <a href="#" class="photographerLink">Nos photographes</a>
+  <nav>
+  <a href="#" class="filterLink">#Portrait</a>
+ <a href="#" class="filterLink">#Art</a>
+ <a href="#" class="filterLink">#Fashion</a>
+ <a href="#" class="filterLink">#Architecture</a>
+ <a href="#" class="filterLink">#Travel</a>
+
+  <a href="#" class="filterLink">#Sport</a>
+ <a href="#" class="filterLink">#Animals</a>
+ <a href="#" class="filterLink">#Events</a>
+
+</nav>
+
 </header>
 
   </body>
