feat(section): article + img

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
-    <%- include('../layouts/header/header.html'); %>
+    <%- include("../layouts/header/header.html"); %> <%-
+    include("../layouts/section/section.html"); %>
   </body>
 </html>
