--- a/www/index.html
+++ b/www/index.html
@@ -74,6 +74,29 @@
 </nav>
 
 </header>
+ <section>
+  <article>
+  <a href="#" class="linkContainer">
+    <div class="imgContainer">
+      <img src="./../img/Mimi/Portrait_Nora.jpg" alt="" />
+    </div>
+
+    <h2>Mimi Keel</h2>
+  </a>
+
+  <p class="location">London,UK</p>
+  <p class="tagline">Voir le beau dans le quotidien></p>
+  <p class="price">400€/jour</p>
+  <nav>
+    <a href="#" class="filterLink">#Portrait</a>
+ <a href="#" class="filterLink">#Event</a>
+ <a href="#" class="filterLink">#Travel</a>
+ <a href="#" class="filterLink">#animals</a>
+
+  </nav>
+</article>
+
+</section>
 
   </body>
 </html>
