--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
   <article>
   <a href="#" class="linkContainer">
     <div class="imgContainer">
-      <img src="./../img/Mimi/Portrait_Nora.jpg" alt="" />
+      <img src="./img/Mimi/Portrait_Nora.jpg" alt="" />
     </div>
 
     <h2>Mimi Keel</h2>
