feat(section): Mise en page terminé

--- a/www/index.html
+++ b/www/index.html
@@ -91,7 +91,107 @@
     <a href="#" class="filterLink">#Portrait</a>
  <a href="#" class="filterLink">#Event</a>
  <a href="#" class="filterLink">#Travel</a>
- <a href="#" class="filterLink">#animals</a>
+ <a href="#" class="filterLink">#Animals</a>
+
+  </nav>
+</article>
+ <article>
+  <a href="#" class="linkContainer">
+    <div class="imgContainer">
+      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+    </div>
+
+    <h2>Ellie-Rose Wilkens</h2>
+  </a>
+
+  <p class="location">Paris,France</p>
+  <p class="tagline">Capturer des compositions complexes></p>
+  <p class="price">250€/jour</p>
+  <nav>
+    <a href="#" class="filterLink">#Portrait</a>
+ <a href="#" class="filterLink">#Event</a>
+ <a href="#" class="filterLink">#Travel</a>
+ <a href="#" class="filterLink">#Animals</a>
+
+  </nav>
+</article>
+ <article>
+  <a href="#" class="linkContainer">
+    <div class="imgContainer">
+      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+    </div>
+
+    <h2>Ellie-Rose Wilkens</h2>
+  </a>
+
+  <p class="location">Paris,France</p>
+  <p class="tagline">Capturer des compositions complexes></p>
+  <p class="price">250€/jour</p>
+  <nav>
+    <a href="#" class="filterLink">#Portrait</a>
+ <a href="#" class="filterLink">#Event</a>
+ <a href="#" class="filterLink">#Travel</a>
+ <a href="#" class="filterLink">#Animals</a>
+
+  </nav>
+</article>
+ <article>
+  <a href="#" class="linkContainer">
+    <div class="imgContainer">
+      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+    </div>
+
+    <h2>Ellie-Rose Wilkens</h2>
+  </a>
+
+  <p class="location">Paris,France</p>
+  <p class="tagline">Capturer des compositions complexes></p>
+  <p class="price">250€/jour</p>
+  <nav>
+    <a href="#" class="filterLink">#Portrait</a>
+ <a href="#" class="filterLink">#Event</a>
+ <a href="#" class="filterLink">#Travel</a>
+ <a href="#" class="filterLink">#Animals</a>
+
+  </nav>
+</article>
+ <article>
+  <a href="#" class="linkContainer">
+    <div class="imgContainer">
+      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+    </div>
+
+    <h2>Ellie-Rose Wilkens</h2>
+  </a>
+
+  <p class="location">Paris,France</p>
+  <p class="tagline">Capturer des compositions complexes></p>
+  <p class="price">250€/jour</p>
+  <nav>
+    <a href="#" class="filterLink">#Portrait</a>
+ <a href="#" class="filterLink">#Event</a>
+ <a href="#" class="filterLink">#Travel</a>
+ <a href="#" class="filterLink">#Animals</a>
+
+  </nav>
+</article>
+ <article>
+  <a href="#" class="linkContainer">
+    <div class="imgContainer">
+      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+    </div>
+
+    <h2>Ellie-Rose Wilkens</h2>
+  </a>
+
+  <p class="location">Paris,France</p>
+  <p class="tagline">Capturer des compositions complexes></p>
+  <p class="price">250€/jour</p>
+  <nav>
+    <a href="#" class="filterLink">#Portrait</a>
+ <a href="#" class="filterLink">#Event</a>
+ <a href="#" class="filterLink">#Travel</a>
+ <a href="#" class="filterLink">#Animals</a>
 
   </nav>
 </article>
