feat(article): Photo et data de chaque photographes

--- a/www/index.html
+++ b/www/index.html
@@ -78,14 +78,14 @@
   <article>
   <a href="#" class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Mimi/Portrait_Nora.jpg" alt="" />
+      <img src="./img/Mimi/Portrait_Nora.jpg" alt="" width="304px" cover />
     </div>
 
     <h2>Mimi Keel</h2>
   </a>
 
   <p class="location">London,UK</p>
-  <p class="tagline">Voir le beau dans le quotidien></p>
+  <p class="tagline">Voir le beau dans le quotidien</p>
   <p class="price">400€/jour</p>
   <nav>
     <a href="#" class="filterLink">#Portrait</a>
@@ -98,14 +98,14 @@
  <article>
   <a href="#" class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" width="200px" cover />
     </div>
 
     <h2>Ellie-Rose Wilkens</h2>
   </a>
 
   <p class="location">Paris,France</p>
-  <p class="tagline">Capturer des compositions complexes></p>
+  <p class="tagline">Capturer des compositions complexes</p>
   <p class="price">250€/jour</p>
   <nav>
     <a href="#" class="filterLink">#Portrait</a>
@@ -118,15 +118,15 @@
  <article>
   <a href="#" class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+      <img src="./img/Tracy/Fashion_Urban_Jungle.jpg" alt="" width="200px" cover />
     </div>
 
-    <h2>Ellie-Rose Wilkens</h2>
+    <h2>Tracy Galin</h2>
   </a>
 
-  <p class="location">Paris,France</p>
-  <p class="tagline">Capturer des compositions complexes></p>
-  <p class="price">250€/jour</p>
+  <p class="location">Montreal,Canada</p>
+  <p class="tagline">Photographe freelance</p>
+  <p class="price">500€/jour</p>
   <nav>
     <a href="#" class="filterLink">#Portrait</a>
  <a href="#" class="filterLink">#Event</a>
@@ -138,15 +138,15 @@
  <article>
   <a href="#" class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+      <img src="./img/Nabeel/Travel_Outdoor_Baths.jpg" alt="" width="200px" cover />
     </div>
 
-    <h2>Ellie-Rose Wilkens</h2>
+    <h2>Nabeel Bradford</h2>
   </a>
 
-  <p class="location">Paris,France</p>
-  <p class="tagline">Capturer des compositions complexes></p>
-  <p class="price">250€/jour</p>
+  <p class="location">Mexico City,Mexico</p>
+  <p class="tagline">Toujours aller de l'avant</p>
+  <p class="price">350€/jour</p>
   <nav>
     <a href="#" class="filterLink">#Portrait</a>
  <a href="#" class="filterLink">#Event</a>
@@ -158,15 +158,15 @@
  <article>
   <a href="#" class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+      <img src="./img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" alt="" width="200px" cover />
     </div>
 
-    <h2>Ellie-Rose Wilkens</h2>
+    <h2>Rhode Dubois</h2>
   </a>
 
-  <p class="location">Paris,France</p>
-  <p class="tagline">Capturer des compositions complexes></p>
-  <p class="price">250€/jour</p>
+  <p class="location">Barcelona,Spain</p>
+  <p class="tagline">Je crée des souvenirs</p>
+  <p class="price">275€/jour</p>
   <nav>
     <a href="#" class="filterLink">#Portrait</a>
  <a href="#" class="filterLink">#Event</a>
@@ -178,15 +178,15 @@
  <article>
   <a href="#" class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Ellie/Architecture_Horseshoe.jpg" alt="" />
+      <img src="./img/Marcel/Travel_Tower.jpg" alt="" width="200px" cover />
     </div>
 
-    <h2>Ellie-Rose Wilkens</h2>
+    <h2>Marcel Nikolic</h2>
   </a>
 
-  <p class="location">Paris,France</p>
-  <p class="tagline">Capturer des compositions complexes></p>
-  <p class="price">250€/jour</p>
+  <p class="location">Berlin,Germany</p>
+  <p class="tagline">Toujours à la recherche de LA photo</p>
+  <p class="price">300€/jour</p>
   <nav>
     <a href="#" class="filterLink">#Portrait</a>
  <a href="#" class="filterLink">#Event</a>
