--- a/www/index.html
+++ b/www/index.html
@@ -79,134 +79,194 @@
 </nav>
 </header>
 
-    <section>
+    <main>
   <article>
   <button class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Mimi/Portrait_Nora.jpg" alt="" width="304px" cover />
+      <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
     </div>
 
-    <h2>Mimi Keel</h2>
+    <h2>
+      Mimi Keel
+    </h2>
   </button>
 
-  <p class="location">London,UK</p>
-  <p class="tagline">Voir le beau dans le quotidien</p>
-  <p class="price">400€/jour</p>
+  <p class="location">
+    London,UK
+  </p>
+  <p class="tagline">
+    Voir le beau dans le quotidien
+  </p>
+  <p class="price">
+    400€/jour
+  </p>
   <nav>
     <button class="filterLink">#Portrait</button>
- <button class="filterLink">#Event</button>
- <button class="filterLink">#Travel</button>
- <button class="filterLink">#Animals</button>
+
+      <button class="filterLink">#Event</button>
+
+        <button class="filterLink">#Travel</button>
+
+          <button class="filterLink">#Animals</button>
 
   </nav>
 </article>
-
     <article>
   <button class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Ellie Rose/Architecture_Horseshoe.jpg" alt="" width="200px" cover />
+      <img src="./img/Ellie Rose/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
     </div>
 
-    <h2>Ellie-Rose Wilkens</h2>
+    <h2>
+      Ellie-Rose Wilkens
+    </h2>
   </button>
 
-  <p class="location">Paris,France</p>
-  <p class="tagline">Capturer des compositions complexes</p>
-  <p class="price">250€/jour</p>
+  <p class="location">
+    Paris,France
+  </p>
+  <p class="tagline">
+    Capturer des compositions complexes
+  </p>
+  <p class="price">
+    250€/jour
+  </p>
   <nav>
     <button class="filterLink">#Portrait</button>
- <button class="filterLink">#Event</button>
- <button class="filterLink">#Travel</button>
- <button class="filterLink">#Animals</button>
+
+      <button class="filterLink">#Event</button>
+
+        <button class="filterLink">#Travel</button>
+
+          <button class="filterLink">#Animals</button>
 
   </nav>
 </article>
-
       <article>
   <button class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Tracy/Fashion_Urban_Jungle.jpg" alt="" width="200px" cover />
+      <img src="./img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
     </div>
 
-    <h2>Tracy Galin</h2>
+    <h2>
+      Tracy Galindo
+    </h2>
   </button>
 
-  <p class="location">Montreal,Canada</p>
-  <p class="tagline">Photographe freelance</p>
-  <p class="price">500€/jour</p>
+  <p class="location">
+    Montreal,Canada
+  </p>
+  <p class="tagline">
+    Photographe freelance
+  </p>
+  <p class="price">
+    500€/jour
+  </p>
   <nav>
     <button class="filterLink">#Portrait</button>
- <button class="filterLink">#Event</button>
- <button class="filterLink">#Travel</button>
- <button class="filterLink">#Animals</button>
+
+      <button class="filterLink">#Event</button>
+
+        <button class="filterLink">#Travel</button>
+
+          <button class="filterLink">#Animals</button>
 
   </nav>
 </article>
-
         <article>
   <button class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Nabeel/Travel_Outdoor_Baths.jpg" alt="" width="200px" cover />
+      <img src="./img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
     </div>
 
-    <h2>Nabeel Bradford</h2>
+    <h2>
+      Nabeel Bradford
+    </h2>
   </button>
 
-  <p class="location">Mexico City,Mexico</p>
-  <p class="tagline">Toujours aller de l'avant</p>
-  <p class="price">350€/jour</p>
+  <p class="location">
+    Mexico City,Mexico
+  </p>
+  <p class="tagline">
+    Toujours aller de l'avant
+  </p>
+  <p class="price">
+    350€/jour
+  </p>
   <nav>
     <button class="filterLink">#Portrait</button>
- <button class="filterLink">#Event</button>
- <button class="filterLink">#Travel</button>
- <button class="filterLink">#Animals</button>
+
+      <button class="filterLink">#Event</button>
+
+        <button class="filterLink">#Travel</button>
+
+          <button class="filterLink">#Animals</button>
 
   </nav>
 </article>
-
           <article>
   <button class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" alt="" width="200px" cover />
+      <img src="./img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
     </div>
 
-    <h2>Rhode Dubois</h2>
+    <h2>
+      Rhode Dubois
+    </h2>
   </button>
 
-  <p class="location">Barcelona,Spain</p>
-  <p class="tagline">Je crée des souvenirs</p>
-  <p class="price">275€/jour</p>
+  <p class="location">
+    Barcelona,Spain
+  </p>
+  <p class="tagline">
+    Je crée des souvenirs
+  </p>
+  <p class="price">
+    275€/jour
+  </p>
   <nav>
     <button class="filterLink">#Portrait</button>
- <button class="filterLink">#Event</button>
- <button class="filterLink">#Travel</button>
- <button class="filterLink">#Animals</button>
+
+      <button class="filterLink">#Event</button>
+
+        <button class="filterLink">#Travel</button>
+
+          <button class="filterLink">#Animals</button>
 
   </nav>
 </article>
-
             <article>
   <button class="linkContainer">
     <div class="imgContainer">
-      <img src="./img/Marcel/Travel_Tower.jpg" alt="" width="200px" cover />
+      <img src="./img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
     </div>
 
-    <h2>Marcel Nikolic</h2>
+    <h2>
+      Marcel Nikolic
+    </h2>
   </button>
 
-  <p class="location">Berlin,Germany</p>
-  <p class="tagline">Toujours à la recherche de LA photo</p>
-  <p class="price">300€/jour</p>
+  <p class="location">
+    Berlin,Germany
+  </p>
+  <p class="tagline">
+    Toujours à la recherche de LA photo
+  </p>
+  <p class="price">
+    300€/jour
+  </p>
   <nav>
     <button class="filterLink">#Portrait</button>
- <button class="filterLink">#Event</button>
- <button class="filterLink">#Travel</button>
- <button class="filterLink">#Animals</button>
+
+      <button class="filterLink">#Event</button>
+
+        <button class="filterLink">#Travel</button>
+
+          <button class="filterLink">#Animals</button>
 
   </nav>
 </article>
-
-</section>
+</main>
 </body>
 
 </html>
