feat(header) : Header terminé + réglages gulpfile.js

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <%- include("./layouts/header/header.html") %>
-        <%- include("./layouts/main/main.html") %>
+    <%- include("../../layouts/header/header.html") %>
+        <%- include("../../layouts/main/main.html") %>
 </body>
 
 </html>
