--- a/www/index.html
+++ b/www/index.html
@@ -8,12 +8,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 </head>
 
 <body>
     <header>
-  <button class="logo" title="logo">
-    <img src="./img/logo/logo.svg" alt="logo">
+  <button class="logo" title="logo" onclick="document.location.href='index.html'">
+    <img src=" ./img/logo/logo.svg" alt="logo">
 </button>
     <button href="#" class="photographerLink">Nos photographes</button>
     <nav>
@@ -29,7 +31,7 @@
 </header>
         <main>
   <article>
-  <button class="linkContainer">
+  <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
       <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
     </div>
@@ -56,7 +58,7 @@
   </nav>
 </article>
     <article>
-  <button class="linkContainer">
+  <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
       <img src="./img/Ellie Rose/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
     </div>
@@ -83,7 +85,7 @@
   </nav>
 </article>
       <article>
-  <button class="linkContainer">
+  <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
       <img src="./img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
     </div>
@@ -110,7 +112,7 @@
   </nav>
 </article>
         <article>
-  <button class="linkContainer">
+  <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
       <img src="./img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
     </div>
@@ -137,7 +139,7 @@
   </nav>
 </article>
           <article>
-  <button class="linkContainer">
+  <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
       <img src="./img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
     </div>
@@ -164,7 +166,7 @@
   </nav>
 </article>
             <article>
-  <button class="linkContainer">
+  <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
       <img src="./img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
     </div>
