--- a/www/photographer.html
+++ b/www/photographer.html
@@ -8,16 +8,17 @@
     <title>Fisheye - photographe</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" />
     <link rel="stylesheet" href="css/photographer.css" type="text/css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 </head>
 
 <body>
     <header>
-        <button class="logo" title="logo">
-    <img src="./img/logo/logo.svg" alt="logo">
+        <button class="logo" title="logo" onclick="document.location.href='index.html'">
+    <img src=" ./img/logo/logo.svg" alt="logo">
 </button>
             <article>
-  <button class="linkContainer">
+  <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
       <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
     </div>
@@ -44,6 +45,42 @@
   </nav>
 </article>
     </header>
+    <main class="photographerMain">
+    <section>
+        <div class="imgContainer">
+            <img class="animalRainbow" src="./img/Mimi/Animals_Rainbow.jpg" alt="" cover>
+        </div>
+        <div class="infoContainer">
+            <p class="imgTitle">
+                Arc-en-ciel
+            </p>
+            <p class="price">
+                70€
+            </p>
+            <p class="like">
+                12
+            </p>
+        </div>
+    </section>
+</main>
+        <main class="photographerMain">
+    <section>
+        <div class="imgContainer">
+            <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
+        </div>
+        <div class="infoContainer">
+            <p class="imgTitle">
+                Solitude
+            </p>
+            <p class="price">
+                70€
+            </p>
+            <p class="like">
+                12
+            </p>
+        </div>
+    </section>
+</main>
 
 </body>
 
