--- a/www/index.html
+++ b/www/index.html
@@ -14,11 +14,11 @@
 
 <body>
     <header>
-  <button class="logo" title="logo" onclick="document.location.href='index.html'">
+        <button class="logo" title="logo" onclick="document.location.href='index.html'">
     <img src=" ./img/logo/logo.svg" alt="logo">
 </button>
-    <button href="#" class="photographerLink">Nos photographes</button>
-    <nav>
+            <button href="#" class="photographerLink">Nos photographes</button>
+            <nav>
   <button href="#" class="filterLink">#Portrait</button>
     <button href="#" class="filterLink">#Art</button>
       <button href="#" class="filterLink">#Fashion</button>
@@ -28,12 +28,12 @@
               <button href="#" class="filterLink">#Animals</button>
                 <button href="#" class="filterLink">#Events</button>
 </nav>
-</header>
-        <main>
-  <article>
+    </header>
+    <main>
+        <article>
   <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
+      <img src="./../img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
     </div>
 
     <h2>
@@ -57,10 +57,10 @@
           <button href="#" class="filterLink">#Animals</button>
   </nav>
 </article>
-    <article>
+            <article>
   <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./img/Ellie Rose/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
+      <img src="./../img/Ellie/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
     </div>
 
     <h2>
@@ -84,10 +84,10 @@
           <button href="#" class="filterLink">#Animals</button>
   </nav>
 </article>
-      <article>
+                <article>
   <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
+      <img src="./../img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
     </div>
 
     <h2>
@@ -111,10 +111,10 @@
           <button href="#" class="filterLink">#Animals</button>
   </nav>
 </article>
-        <article>
+                    <article>
   <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
+      <img src="./../img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
     </div>
 
     <h2>
@@ -138,10 +138,10 @@
           <button href="#" class="filterLink">#Animals</button>
   </nav>
 </article>
-          <article>
+                        <article>
   <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
+      <img src="./../img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
     </div>
 
     <h2>
@@ -165,10 +165,10 @@
           <button href="#" class="filterLink">#Animals</button>
   </nav>
 </article>
-            <article>
+                            <article>
   <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
+      <img src="./../img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
     </div>
 
     <h2>
@@ -192,7 +192,7 @@
           <button href="#" class="filterLink">#Animals</button>
   </nav>
 </article>
-</main>
+    </main>
 </body>
 
 </html>
