--- a/www/photographer.html
+++ b/www/photographer.html
@@ -46,41 +46,42 @@
 </article>
     </header>
     <main class="photographerMain">
-    <section>
-        <div class="imgContainer">
-            <img class="animalRainbow" src="./img/Mimi/Animals_Rainbow.jpg" alt="" cover>
-        </div>
-        <div class="infoContainer">
-            <p class="imgTitle">
-                Arc-en-ciel
-            </p>
-            <p class="price">
-                70€
-            </p>
-            <p class="like">
-                12
-            </p>
-        </div>
-    </section>
-</main>
-        <main class="photographerMain">
-    <section>
-        <div class="imgContainer">
-            <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
-        </div>
-        <div class="infoContainer">
-            <p class="imgTitle">
-                Solitude
-            </p>
-            <p class="price">
-                70€
-            </p>
-            <p class="like">
-                12
-            </p>
-        </div>
-    </section>
-</main>
+        <section class="photographerSection">
+    <div class="imgContainer">
+        <img class="animalRainbow" src="./img/Mimi/Animals_Rainbow.jpg" alt="" cover>
+    </div>
+    <div class="infoContainer">
+        <p class="imgTitle">
+            Arc-en-ciel
+        </p>
+        <p class="price">
+            70€
+        </p>
+        <p class="like">
+            12
+        </p>
+    </div>
+</section>
+            <section class="photographerSection">
+    <div class="imgContainer">
+        <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
+    </div>
+    <div class="infoContainer">
+        <p class="imgTitle">
+            Solitude
+        </p>
+        <p class="price">
+            70€
+        </p>
+        <p class="like">
+            12
+        </p>
+    </div>
+</section>
+    </main>
+    <button class="btContactMobile">
+    Contactez-moi</button>
+
 
 </body>
 
