fix(photographerSection): ajout du bt aux img

--- a/www/photographer.html
+++ b/www/photographer.html
@@ -47,9 +47,9 @@
     </header>
     <main class="photographerMain">
         <section class="photographerSection">
-    <div class="imgContainer">
+    <button class="imgContainer" onclick="openLightbox()">
         <img class="animalRainbow" src="./img/Mimi/Animals_Rainbow.jpg" alt="" cover>
-    </div>
+    </button>
     <div class="infoContainer">
         <p class="imgTitle">
             Arc-en-ciel
@@ -63,9 +63,9 @@
     </div>
 </section>
             <section class="photographerSection">
-    <div class="imgContainer">
+    <button class="imgContainer" onclick="openLightbox()">
         <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
-    </div>
+    </button>
     <div class="infoContainer">
         <p class="imgTitle">
             Solitude
