--- a/www/index.html
+++ b/www/index.html
@@ -17,8 +17,8 @@
         <button class="logo" title="logo" onclick="document.location.href='index.html'">
     <img src=" ./img/logo/logo.svg" alt="logo">
 </button>
-            <button href="#" class="photographerLink">Nos photographes</button>
-            <nav>
+            <button href="#" class="photographersLink">Nos photographes</button>
+            <nav class="indexNav">
   <button href="#" class="filterLink">#Portrait</button>
     <button href="#" class="filterLink">#Art</button>
       <button href="#" class="filterLink">#Fashion</button>
@@ -30,167 +30,167 @@
 </nav>
     </header>
     <main>
-        <article>
-  <button class="linkContainer" onclick="document.location.href='photographer.html'">
+        <article class="indexArticle">
+  <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./../img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
+        <img src="./../img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
     </div>
 
     <h2>
-      Mimi Keel
+        Mimi Keel
     </h2>
-  </button>
+</button>
 
-  <p class="location">
-    London,UK
-  </p>
-  <p class="tagline">
-    Voir le beau dans le quotidien
-  </p>
-  <p class="price">
-    400€/jour
-  </p>
-  <nav>
-    <button href="#" class="filterLink">#Portrait</button>
-      <button href="#" class="filterLink">#Event</button>
-        <button href="#" class="filterLink">#Travel</button>
-          <button href="#" class="filterLink">#Animals</button>
-  </nav>
+    <p class="location">
+      London,UK
+    </p>
+    <p class="tagline">
+      Voir le beau dans le quotidien
+    </p>
+    <p class="price">
+      400€/jour
+    </p>
+    <nav>
+      <button href="#" class="filterLink">#portrait</button>
+        <button href="#" class="filterLink">#events</button>
+          <button href="#" class="filterLink">#travel</button>
+            <button href="#" class="filterLink">#animals</button>
+    </nav>
 </article>
-            <article>
-  <button class="linkContainer" onclick="document.location.href='photographer.html'">
+            <article class="indexArticle">
+  <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./../img/Ellie/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
+        <img src="./../img/Ellie/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
     </div>
 
     <h2>
-      Ellie-Rose Wilkens
+        Ellie-Rose Wilkens
     </h2>
-  </button>
+</button>
 
-  <p class="location">
-    Paris,France
-  </p>
-  <p class="tagline">
-    Capturer des compositions complexes
-  </p>
-  <p class="price">
-    250€/jour
-  </p>
-  <nav>
-    <button href="#" class="filterLink">#Portrait</button>
-      <button href="#" class="filterLink">#Event</button>
-        <button href="#" class="filterLink">#Travel</button>
-          <button href="#" class="filterLink">#Animals</button>
-  </nav>
+    <p class="location">
+      Paris,France
+    </p>
+    <p class="tagline">
+      Capturer des compositions complexes
+    </p>
+    <p class="price">
+      250€/jour
+    </p>
+    <nav>
+      <button href="#" class="filterLink">#portrait</button>
+        <button href="#" class="filterLink">#events</button>
+          <button href="#" class="filterLink">#travel</button>
+            <button href="#" class="filterLink">#animals</button>
+    </nav>
 </article>
-                <article>
-  <button class="linkContainer" onclick="document.location.href='photographer.html'">
+                <article class="indexArticle">
+  <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./../img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
+        <img src="./../img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
     </div>
 
     <h2>
-      Tracy Galindo
+        Tracy Galindo
     </h2>
-  </button>
+</button>
 
-  <p class="location">
-    Montreal,Canada
-  </p>
-  <p class="tagline">
-    Photographe freelance
-  </p>
-  <p class="price">
-    500€/jour
-  </p>
-  <nav>
-    <button href="#" class="filterLink">#Portrait</button>
-      <button href="#" class="filterLink">#Event</button>
-        <button href="#" class="filterLink">#Travel</button>
-          <button href="#" class="filterLink">#Animals</button>
-  </nav>
+    <p class="location">
+      Montreal,Canada
+    </p>
+    <p class="tagline">
+      Photographe freelance
+    </p>
+    <p class="price">
+      500€/jour
+    </p>
+    <nav>
+      <button href="#" class="filterLink">#portrait</button>
+        <button href="#" class="filterLink">#events</button>
+          <button href="#" class="filterLink">#travel</button>
+            <button href="#" class="filterLink">#animals</button>
+    </nav>
 </article>
-                    <article>
-  <button class="linkContainer" onclick="document.location.href='photographer.html'">
+                    <article class="indexArticle">
+  <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./../img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
+        <img src="./../img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
     </div>
 
     <h2>
-      Nabeel Bradford
+        Nabeel Bradford
     </h2>
-  </button>
+</button>
 
-  <p class="location">
-    Mexico City,Mexico
-  </p>
-  <p class="tagline">
-    Toujours aller de l'avant
-  </p>
-  <p class="price">
-    350€/jour
-  </p>
-  <nav>
-    <button href="#" class="filterLink">#Portrait</button>
-      <button href="#" class="filterLink">#Event</button>
-        <button href="#" class="filterLink">#Travel</button>
-          <button href="#" class="filterLink">#Animals</button>
-  </nav>
+    <p class="location">
+      Mexico City,Mexico
+    </p>
+    <p class="tagline">
+      Toujours aller de l'avant
+    </p>
+    <p class="price">
+      350€/jour
+    </p>
+    <nav>
+      <button href="#" class="filterLink">#portrait</button>
+        <button href="#" class="filterLink">#events</button>
+          <button href="#" class="filterLink">#travel</button>
+            <button href="#" class="filterLink">#animals</button>
+    </nav>
 </article>
-                        <article>
-  <button class="linkContainer" onclick="document.location.href='photographer.html'">
+                        <article class="indexArticle">
+  <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./../img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
+        <img src="./../img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
     </div>
 
     <h2>
-      Rhode Dubois
+        Rhode Dubois
     </h2>
-  </button>
+</button>
 
-  <p class="location">
-    Barcelona,Spain
-  </p>
-  <p class="tagline">
-    Je crée des souvenirs
-  </p>
-  <p class="price">
-    275€/jour
-  </p>
-  <nav>
-    <button href="#" class="filterLink">#Portrait</button>
-      <button href="#" class="filterLink">#Event</button>
-        <button href="#" class="filterLink">#Travel</button>
-          <button href="#" class="filterLink">#Animals</button>
-  </nav>
+    <p class="location">
+      Barcelona,Spain
+    </p>
+    <p class="tagline">
+      Je crée des souvenirs
+    </p>
+    <p class="price">
+      275€/jour
+    </p>
+    <nav>
+      <button href="#" class="filterLink">#portrait</button>
+        <button href="#" class="filterLink">#events</button>
+          <button href="#" class="filterLink">#travel</button>
+            <button href="#" class="filterLink">#animals</button>
+    </nav>
 </article>
-                            <article>
-  <button class="linkContainer" onclick="document.location.href='photographer.html'">
+                            <article class="indexArticle">
+  <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-      <img src="./../img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
+        <img src="./../img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
     </div>
 
     <h2>
-      Marcel Nikolic
+        Marcel Nikolic
     </h2>
-  </button>
+</button>
 
-  <p class="location">
-    Berlin,Germany
-  </p>
-  <p class="tagline">
-    Toujours à la recherche de LA photo
-  </p>
-  <p class="price">
-    300€/jour
-  </p>
-  <nav>
-    <button href="#" class="filterLink">#Portrait</button>
-      <button href="#" class="filterLink">#Event</button>
-        <button href="#" class="filterLink">#Travel</button>
-          <button href="#" class="filterLink">#Animals</button>
-  </nav>
+    <p class="location">
+      Berlin,Germany
+    </p>
+    <p class="tagline">
+      Toujours à la recherche de LA photo
+    </p>
+    <p class="price">
+      300€/jour
+    </p>
+    <nav>
+      <button href="#" class="filterLink">#portrait</button>
+        <button href="#" class="filterLink">#events</button>
+          <button href="#" class="filterLink">#travel</button>
+            <button href="#" class="filterLink">#animals</button>
+    </nav>
 </article>
     </main>
 </body>
