--- a/www/photographer.html
+++ b/www/photographer.html
@@ -17,8 +17,8 @@
         <button class="logo" title="logo" onclick="document.location.href='index.html'">
     <img src=" ./img/logo/logo.svg" alt="logo">
 </button>
-            <article>
-  <button class="linkContainer" onclick="document.location.href='photographer.html'">
+            <article class="photographerArticle">
+  <div class="imgNameContainer">
     <div class="imgContainer">
       <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
     </div>
@@ -26,8 +26,7 @@
     <h2>
       Mimi Keel
     </h2>
-  </button>
-
+  </div>
   <p class="location">
     London,UK
   </p>
@@ -37,11 +36,11 @@
   <p class="price">
     400€/jour
   </p>
-  <nav>
-    <button href="#" class="filterLink">#Portrait</button>
-      <button href="#" class="filterLink">#Event</button>
-        <button href="#" class="filterLink">#Travel</button>
-          <button href="#" class="filterLink">#Animals</button>
+  <nav class="photographerNav">
+    <button href="#" class="filterLink">#portrait</button>
+      <button href="#" class="filterLink">#events</button>
+        <button href="#" class="filterLink">#travel</button>
+          <button href="#" class="filterLink">#animals</button>
   </nav>
 </article>
     </header>
